# low-resource-semantic-search

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: demo_build.json
data/: demo_corpus.jsonl  demo_queries.jsonl
src/low_resource_semantic_search/: __init__.py  api.py  cli.py  config.py  corpus.py  encoders.py  evaluation.py  index.py  pipeline.py  query_understanding.py  vectors.py
tests/: test_engine.py
